2016-07-21  Jason Merrill  <jason@redhat.com>

	* call.c (build_over_call): Check unsafe_copy_elision_p even for
	trivial constructors.
	* method.c (do_build_copy_constructor): Don't copy tail padding
	even in a trivial constructor.

2016-07-21  Jakub Jelinek  <jakub@redhat.com>

	PR c++/71728
	* constexpr.c (potential_constant_expression_1) <case GOTO_EXPR>:
	Replace assert with test, return false if the goto isn't break
	or continue.  Formatting fix.

2016-07-21  Richard Biener  <rguenther@suse.de>

	* vtable-class-hierarchy.c (vtv_generate_init_routine): Set
	DECL_IGNORED_P.

2016-07-21  Jakub Jelinek  <jakub@redhat.com>

	PR c++/71941
	* cp-gimplify.c (cp_genericize): For nested cp_genericize calls
	save/restore bc_label array.

2016-07-21  Jason Merrill  <jason@redhat.com>

	PR c++/70781
	* parser.c (cp_parser_lambda_expression): Unset OK if there was an
	error parsing the lambda-declarator.

	PR c++/71896
	* constexpr.c (cxx_eval_binary_expression): Handle comparison
	between lowered and unlowered PTRMEM_CST.

	PR c++/65168
	* typeck.c (cp_truthvalue_conversion): Compare pointers to nullptr.
	Don't set c_inhibit_evaluation_warnings.

	PR c++/71121
	* cp-gimplify.c (cp_fully_fold): First call maybe_constant_value.

2016-07-21  Andrew Sutton  <andrew.n.sutton@gmail.com>
	    Jason Merrill  <jason@redhat.com>

	Improving concepts performance and diagnostics.
	PR c++/67565
	PR c++/67579
	PR c++/71843
	* cp-tree.def (CHECK_CONSTR): New.
	* cp-tree.h (CHECK_CONSTR_CONCEPT): New.
	(CHECK_CONSTR_ARGS): New.
	* constraint.cc (make_predicate_constraint): Remove in favor of
	normalize_expression.
	(resolve_constraint_check): Actually return error_mark_node when
	resolution fails.
	(resolve_variable_concept_check): Perform coercion as if processing
	a template. Also return errors on resolution failure.
	(lift_*): Remove all of these functions. Don't unnecessarily inline
	concepts.
	(learn_*): Add facilities to memoize implications for subsumption
	during normalization.